--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
