--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,23 @@
     "@tanstack/react-query": "^5.51.4",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-hotkeys": "^2.0.0",
     "react-hotkeys-hook": "^4.5.0",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "remixicon-react": "^1.0.0",
+    "sweetalert2": "^11.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
