--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
